# coinrun_adventure

./: .devcontainer.json  .gitignore  build.sh  install.sh  pyproject.toml  run.sh
coinrun/: __init__.py  coinrunenv.py  config.py  config_.py  interactive.py  setup_utils.py
coinrun/common/: vec_env.py
coinrun_adventure/: config.py  logger.py  misc_utils.py  play_with_agent.py  random_agent.py  run.py  setup_utils.py  test_agent.py  test_with_agent.py  train_agent.py
coinrun_adventure/agents/: distributions.py  model.py  networks.py  policies.py  ppo.py  utilities.py
coinrun_adventure/common/: __init__.py  data_structures.py  distributions.py  mpi_adam_optimizer.py  mpi_util.py  networks.py  policies.py  utilities.py  wrappers.py
coinrun_adventure/network/: bodies.py  heads.py
coinrun_adventure/ppo/: __init__.py  agent.py  entrypoint.py  model.py  policies.py  runner.py
coinrun_adventure/utils/: __init__.py  misc_util.py  misc_utils.py  mpi_util.py  setup_util.py  setup_utils.py  torch_utils.py
env/: Dockerfile  base_dependencies.txt  requirements.txt
tests/: test_coinrun_adventure.py
