[tool.poetry]
name = "coinrun_adventure"
version = "0.1.1"
description = ""
authors = ["Anaelle Laurans <16943368+Laurans@users.noreply.github.com>"]
packages = [
    {include= "coinrun_adventure"},
    {include= "coinrun"},
]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.3.2"
joblib = "^0.14.0"
mpi4py = "^3.0"
gym = "^0.14.0"
names = "^0.3.0"
dataclasses-serialization = "^1.2"
opencv-python = "^4.1"
torch = "^1.3"
tensorboard = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
ipython = "^7.8"
mypy = "^0.740.0"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
